[package]
name = "bababot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
eyre = "0.6.8"
indoc = "2.0.4"
serde_json = "1.0.107"
serenity = "0.11.6"
tokio = {version = "1.32.0", features = ["rt-multi-thread"]}
tungstenite = "0.17.3"
