[package]
name = "bababot"
version = "0.1.0"
edition = "2021"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
chrono = "0.4.31"
eyre = "0.6.8"
indoc = "2.0.4"
rand = "0.8.5"
rusqlite = "0.29.0"
serde_json = "1.0.107"
serenity = { version = "0.11.6", default-features = false, features = [
    "rustls_backend",
    "builder",
    "cache",
    "chrono",
    "client",
    "gateway",
    "model",
    "http",
] }
tokio = { version = "1.32.0", features = ["rt-multi-thread"] }
tungstenite = "0.20.1"
webpki = "0.22.2"
